fixed render logic for HomePageContents and added meetings cards

--- a/src/components/mainAreas/mainAreas.scss
+++ b/src/components/mainAreas/mainAreas.scss
@@ -1,11 +1,12 @@
 // This styling is approximate and very rough, would need refinement for certain sizes and cases
 // Large size does not look good and would need to be fixed
+// can't quite get the background color right from the mockup to show white items as contrast
 .og-portal-container {
 	height: 100vh;
 	width: 103vw;
 	display: flex;
 	padding: 0px;
-	background-color: #f3f3f3;
+	background-color: #e2e4e6fc;
 	color: #545f71;
 }
 
