--- a/src/components/sidebars/sideBar.scss
+++ b/src/components/sidebars/sideBar.scss
@@ -11,14 +11,14 @@
 	width: 6%;
 	padding-right: 0%;
 	padding-left: 0%;
-	border-left: 3px solid #eeeeee;
+	border-left: 3px solid #d1d2d4;
 }
 
 .og-sidebar-left {
 	width: 6%;
 	padding-right: 0%;
 	padding-left: 0%;
-	border-right: 3px solid #eeeeee;
+	border-right: 3px solid #d1d2d4;
 }
 
 .og-fora-logo-sidebar {
