Added viewings and restyled cards

--- a/src/components/mainAreas/mainAreas.scss
+++ b/src/components/mainAreas/mainAreas.scss
@@ -18,5 +18,10 @@
 }
 
 .og-main-area-body {
-	margin-top: 5%;
+	margin-top: 3%;
+}
+
+.og-main-area-location-select {
+	padding-right: 0%;
+	padding-left: 0%;
 }
