--- a/src/components/dropdowns/locationDropdown.scss
+++ b/src/components/dropdowns/locationDropdown.scss
@@ -1,7 +1,10 @@
 .og-location-dropdown {
 	background-color: transparent;
-	border: 2px solid #dddddd;
-	border-radius: 8px;
+	border: 2px solid #d3d0d0;
 	padding: 4px;
-	margin-left: 20%;
+	border-radius: 8px;
+	margin-right: 12%;
+	margin-left: 6%;
+	margin-top: 2%;
+	margin-bottom: 2%;
 }
