--- a/src/components/sidebars/sideBar.scss
+++ b/src/components/sidebars/sideBar.scss
@@ -2,7 +2,7 @@
 // More work would need to be done by adding different classes at different sizes for mobile, tablet and to align items more perfectly for different cases
 .og-sidebar {
 	align-items: center;
-	height: 95%;
+	height: 95vh;
 	margin-top: 30%;
 	margin-bottom: 25%;
 }
