fixed location dropdown and fixed some page styling

--- a/src/components/cards/ogColumnCard.scss
+++ b/src/components/cards/ogColumnCard.scss
@@ -23,14 +23,14 @@
 	.og-column-card-right {
 		justify-content: center;
 		display: flex;
-		height: 42%;
+		height: 56%;
 	}
 }
 
 .og-qr-card-qr-wrapper {
 	background-color: #545f71;
 	width: 57%;
-	max-width: 38px;
+	max-width: 64%;
 	border-radius: 8px;
 	justify-content: center;
 	display: flex;
