--- a/src/components/pageContents/homePageContents.scss
+++ b/src/components/pageContents/homePageContents.scss
@@ -1,12 +1,34 @@
 .og-viewing-move-column {
+	height: 100%;
+
 	.og-page-column {
-		max-height: 40%;
+		min-height: 25%;
 		padding-right: 2%;
 		padding-left: 2%;
+	}
+
+	.og-viewings-page-column {
+		max-height: 28.4%;
+	}
+
+	.og-move-page-column {
+		max-height: 25%;
 	}
 }
 
 .og-meetings-column {
 	padding-right: 2%;
 	padding-left: 2%;
+
+	.og-meetings-page-column {
+		max-height: 50%;
+	}
+}
+
+.og-home-page-contents {
+	height: 100%;
+}
+
+.og-room-bookings-contents {
+	padding-left: 4%;
 }
