--- a/src/components/dropdowns/locationDropdown.scss
+++ b/src/components/dropdowns/locationDropdown.scss
@@ -1,10 +1,24 @@
 .og-location-dropdown {
 	background-color: transparent;
-	border: 2px solid #d3d0d0;
-	padding: 4px;
+	border: 2.5px solid #d3d0d0;
+	color: #545f71;
+	padding: 9px;
 	border-radius: 8px;
 	margin-right: 12%;
 	margin-left: 6%;
 	margin-top: 2%;
 	margin-bottom: 2%;
+	width: 82%;
+	text-align: left;
+}
+
+.og-location-dropdown:hover {
+	background-color: #f2f2f2;
+	border-color: #545f71;
+	color: #545f71;
+}
+
+.og-location-dropdown-menu {
+	width: 82%;
+	background-color: #e2e4e6fc;
 }
