--- a/src/components/pageSections/ogPageColumn.scss
+++ b/src/components/pageSections/ogPageColumn.scss
@@ -1,9 +1,9 @@
 .og-page-column {
 	font-size: 1.6rem;
-	padding-bottom: 5%;
 	overflow: hidden;
 }
 .og-page-column-heading {
+	margin-top: 4%;
 	margin-bottom: 4%;
 	margin-right: 5%;
 	margin-left: 5%;
