fixed some rendering bugs and added readme, removed unecessary renders

--- a/src/components/dropdowns/locationDropdown.scss
+++ b/src/components/dropdowns/locationDropdown.scss
@@ -22,3 +22,9 @@
 	width: 82%;
 	background-color: #e2e4e6fc;
 }
+
+.og-locaiton-dropdown.btn.show:hover {
+	background-color: #f2f2f2 !important;
+	border-color: #545f71 !important;
+	color: #545f71 !important;
+}
