--- a/src/components/cards/ogColumnCard.scss
+++ b/src/components/cards/ogColumnCard.scss
@@ -29,8 +29,8 @@
 
 .og-qr-card-qr-wrapper {
 	background-color: #545f71;
-	width: 57%;
-	max-width: 64%;
+	width: 50px;
+	height: 50px;
 	border-radius: 8px;
 	justify-content: center;
 	display: flex;
